# CmakeProjectTemplates

./: .gitmodules  CMakeLists.txt  README.md
cmake/: libzmq.cmake  messagecolor.cmake  serial.cmake  spdlog.cmake  toolchain_options.cmake  utils.cmake
scripts/: install_libsodium.sh  install_protobuf.sh
src/: CMakeLists.txt
src/common/: common.hpp  version.hpp
src/logger/: logger.cpp  logger.hpp
src/main/: main.cpp
src/protobuf/: Bmi160ToData.proto  CMakeLists.txt  CliffSensorMsg.proto  GenProtobuf.sh  IMUMessage.proto  PlanMsgToState.proto  RangeSensorMsg.proto  RobotPose.proto  STM32MsgToCostMap.proto  StateMachineMsgToAll.proto  StateMsgToPlan.proto  StateMsgToSTM32.proto  Stm32ToState.proto  Vector3d.proto
tests/: CMakeLists.txt  test_logger.cpp  test_serial.cpp  test_zmq_pair.cpp  test_zmq_push.cpp
